// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing CategorySelect test render CategorySelect Loading 1`] = `
<div>
  <div>
    <div
      class="css-10m13ut"
    >
      <div
        class="css-1gwlyb6"
      >
        <a
          class="css-12eo6k0"
          href="/url/url/"
          title="Назад"
        >
          <img
            alt="back"
            src="arrow-left.svg"
          />
        </a>
      </div>
    </div>
    <div
      class="css-6i4ykg"
    >
      <span
        class="css-1m6qh8b"
      />
      <span
        class="css-1fni309"
      />
      <span
        class="css-oqbc0s"
      />
      <span
        class="css-1olkxn8"
      />
      <span
        class="css-1vc4txl"
      />
      <span
        class="css-hkkqum"
      />
      <span
        class="css-1nfmhdq"
      />
      <span
        class="css-1jyf7or"
      />
    </div>
  </div>
</div>
`;

exports[`testing CategorySelect test render CategorySelect add Item 1`] = `
<div>
  <div>
    <div
      class="css-10m13ut"
    >
      <div
        class="css-1gwlyb6"
      >
        <a
          class="css-12eo6k0"
          href="/url/url/"
          title="Назад"
        >
          <img
            alt="back"
            src="arrow-left.svg"
          />
        </a>
      </div>
    </div>
    <div
      class="css-1gwlyb6"
    >
      <ul
        class="css-1loydxm"
      >
        <li
          class="css-kagisi"
        >
          <h2
            class="css-156op5v"
          >
            Выберите категорию:
          </h2>
        </li>
        <li
          class="css-kagisi"
        >
          <button
            class="css-kxqetq"
            title="Кнопка для добавления категорий"
            type="button"
          >
            +
          </button>
        </li>
      </ul>
      <form>
        <div
          class="css-139b3em"
        >
          <button
            class="css-p42m1b"
            color="#FFFFFF"
            title="Продукты"
            type="button"
          >
            <div
              class="css-1q4bltv"
              color="#08AE0F"
            />
            Продукты
          </button>
          <button
            class="css-p42m1b"
            color="#FFFFFF"
            title="Бытовая химия"
            type="button"
          >
            <div
              class="css-1ewgiqb"
              color="#3414F5"
            />
            Бытовая химия
          </button>
        </div>
        <p
          class="css-1enixo5"
        >
          Введите название покупки:
        </p>
        <div
          class="css-dw8up7"
        >
          <textarea
            class="css-14sbxw9"
            name="text"
            placeholder="Введите текст"
          >
            Кефир
          </textarea>
        </div>
        <button
          class="css-10uh9e6"
          title="Добавить"
          type="submit"
        >
          Добавить
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`testing CategorySelect test render CategorySelect add Item 2`] = `
<div>
  <div>
    <div
      class="css-10m13ut"
    >
      <div
        class="css-1gwlyb6"
      >
        <a
          class="css-12eo6k0"
          href="/url/url/"
          title="Назад"
        >
          <img
            alt="back"
            src="arrow-left.svg"
          />
        </a>
      </div>
    </div>
    <div
      class="css-1gwlyb6"
    >
      <ul
        class="css-1loydxm"
      >
        <li
          class="css-kagisi"
        >
          <h2
            class="css-156op5v"
          >
            Выберите категорию:
          </h2>
        </li>
        <li
          class="css-kagisi"
        >
          <button
            class="css-kxqetq"
            title="Кнопка для добавления категорий"
            type="button"
          >
            +
          </button>
        </li>
      </ul>
      <form>
        <div
          class="css-139b3em"
        >
          <button
            class="css-sbcdrl"
            color="#D2D5D9"
            title="Продукты"
            type="button"
          >
            <div
              class="css-1q4bltv"
              color="#08AE0F"
            />
            Продукты
          </button>
          <button
            class="css-p42m1b"
            color="#FFFFFF"
            title="Бытовая химия"
            type="button"
          >
            <div
              class="css-1ewgiqb"
              color="#3414F5"
            />
            Бытовая химия
          </button>
        </div>
        <p
          class="css-1enixo5"
        >
          Введите название покупки:
        </p>
        <div
          class="css-dw8up7"
        >
          <textarea
            class="css-14sbxw9"
            disabled=""
            name="text"
            placeholder="Введите текст"
          >
            Молоко
          </textarea>
        </div>
        <button
          class="css-10uh9e6"
          disabled=""
          title="Добавить"
          type="submit"
        >
          Добавить
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`testing CategorySelect test render CategorySelect add Item 3`] = `
<div>
  <div>
    <div
      class="css-10m13ut"
    >
      <div
        class="css-1gwlyb6"
      >
        <a
          class="css-12eo6k0"
          href="/url/url/"
          title="Назад"
        >
          <img
            alt="back"
            src="arrow-left.svg"
          />
        </a>
      </div>
    </div>
    <div
      class="css-1gwlyb6"
    >
      <ul
        class="css-1loydxm"
      >
        <li
          class="css-kagisi"
        >
          <h2
            class="css-156op5v"
          >
            Выберите категорию:
          </h2>
        </li>
        <li
          class="css-kagisi"
        >
          <button
            class="css-kxqetq"
            title="Кнопка для добавления категорий"
            type="button"
          >
            +
          </button>
        </li>
      </ul>
      <form>
        <div
          class="css-139b3em"
        >
          <button
            class="css-sbcdrl"
            color="#D2D5D9"
            title="Продукты"
            type="button"
          >
            <div
              class="css-1q4bltv"
              color="#08AE0F"
            />
            Продукты
          </button>
          <button
            class="css-p42m1b"
            color="#FFFFFF"
            title="Бытовая химия"
            type="button"
          >
            <div
              class="css-1ewgiqb"
              color="#3414F5"
            />
            Бытовая химия
          </button>
        </div>
        <p
          class="css-1enixo5"
        >
          Введите название покупки:
        </p>
        <div
          class="css-dw8up7"
        >
          <textarea
            class="css-14sbxw9"
            disabled=""
            name="text"
            placeholder="Введите текст"
          >
            Хлеб_
          </textarea>
          <span
            class="css-uexi7o"
          >
            Специальные символы запрещены, кроме символа: процента, запятой, номера, тире
          </span>
        </div>
        <button
          class="css-10uh9e6"
          disabled=""
          title="Добавить"
          type="submit"
        >
          Добавить
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`testing CategorySelect test render CategorySelect add Item span error 1`] = `
<div>
  <div>
    <div
      class="css-10m13ut"
    >
      <div
        class="css-1gwlyb6"
      >
        <a
          class="css-12eo6k0"
          href="/url/url/"
          title="Назад"
        >
          <img
            alt="back"
            src="arrow-left.svg"
          />
        </a>
      </div>
    </div>
    <div
      class="css-1gwlyb6"
    >
      <ul
        class="css-1loydxm"
      >
        <li
          class="css-kagisi"
        >
          <h2
            class="css-156op5v"
          >
            Выберите категорию:
          </h2>
        </li>
        <li
          class="css-kagisi"
        >
          <button
            class="css-kxqetq"
            title="Кнопка для добавления категорий"
            type="button"
          >
            +
          </button>
        </li>
      </ul>
      <form>
        <div
          class="css-139b3em"
        >
          <button
            class="css-p42m1b"
            color="#FFFFFF"
            title="Продукты"
            type="button"
          >
            <div
              class="css-1q4bltv"
              color="#08AE0F"
            />
            Продукты
          </button>
          <button
            class="css-p42m1b"
            color="#FFFFFF"
            title="Бытовая химия"
            type="button"
          >
            <div
              class="css-1ewgiqb"
              color="#3414F5"
            />
            Бытовая химия
          </button>
        </div>
        <span
          class="css-uexi7o"
        >
          Необходимо выбрать категорию покупки
        </span>
        <p
          class="css-1enixo5"
        >
          Введите название покупки:
        </p>
        <div
          class="css-dw8up7"
        >
          <textarea
            class="css-14sbxw9"
            name="text"
            placeholder="Введите текст"
          />
          <span
            class="css-uexi7o"
          >
            Название покупки не может быть пустым
          </span>
        </div>
        <button
          class="css-10uh9e6"
          title="Добавить"
          type="submit"
        >
          Добавить
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`testing CategorySelect test render CategorySelect add categories 1`] = `
<div>
  <div>
    <div
      class="css-10m13ut"
    >
      <div
        class="css-1gwlyb6"
      >
        <a
          class="css-12eo6k0"
          href="/url/url/"
          title="Назад"
        >
          <img
            alt="back"
            src="arrow-left.svg"
          />
        </a>
      </div>
    </div>
    <div
      class="css-1gwlyb6"
    >
      <ul
        class="css-1loydxm"
      >
        <li
          class="css-kagisi"
        >
          <h2
            class="css-156op5v"
          >
            Выберите категорию:
          </h2>
        </li>
        <li
          class="css-kagisi"
        />
      </ul>
      <form>
        <div
          class="css-139b3em"
        >
          <button
            class="css-p42m1b"
            color="#FFFFFF"
            title="Продукты"
            type="button"
          >
            <div
              class="css-1q4bltv"
              color="#08AE0F"
            />
            Продукты
          </button>
          <button
            class="css-p42m1b"
            color="#FFFFFF"
            title="Бытовая химия"
            type="button"
          >
            <div
              class="css-1ewgiqb"
              color="#3414F5"
            />
            Бытовая химия
          </button>
        </div>
        <p
          class="css-1enixo5"
        >
          Введите название покупки:
        </p>
        <div
          class="css-dw8up7"
        >
          <textarea
            class="css-14sbxw9"
            name="text"
            placeholder="Введите текст"
          />
        </div>
        <button
          class="css-10uh9e6"
          title="Добавить"
          type="submit"
        >
          Добавить
        </button>
      </form>
      <form>
        <p
          class="css-1enixo5"
        >
          Если нет подходящей категории:
        </p>
        <div
          class="css-4ok39k"
        >
          <input
            class="css-1w4q98z"
            name="name"
            placeholder="Введите название категории"
            type="text"
            value=""
          />
          <span
            class="css-uexi7o"
          >
            Название категории не может быть пустой
          </span>
          <select
            class="css-178zj4d"
            data-testid="select"
            name="color"
          >
            <option
              disabled=""
              value=""
            >
              Выберите цвет
            </option>
            <option
              value="#08AE0F"
            >
              Зеленый
            </option>
            <option
              value="#9D79B9"
            >
              Лиловый
            </option>
            <option
              value="#B11F1F"
            >
              Алый
            </option>
            <option
              value="#3414F5"
            >
              Синий
            </option>
            <option
              value="#008060"
            >
              Тёмно-зелёный
            </option>
            <option
              value="#D928D2"
            >
              Розовый
            </option>
            <option
              value="#9B763D"
            >
              Коричневый
            </option>
            <option
              value="#830DF9"
            >
              Фиолетовый
            </option>
            <option
              value="#FA8803"
            >
              Оранжевый
            </option>
            <option
              value="#FCF20E"
            >
              Жёлтый
            </option>
            <option
              value="#EC1818"
            >
              Красный
            </option>
            <option
              value="#14F52B"
            >
              Светло-зеленый
            </option>
          </select>
          <span
            class="css-uexi7o"
          >
            Необходимо выберать цвет категории
          </span>
        </div>
        <button
          class="css-15jozr4"
          title="Добавить категорию"
          type="submit"
        >
          Добавить категорию
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`testing CategorySelect test render CategorySelect add categories 2`] = `
<div>
  <div>
    <div
      class="css-10m13ut"
    >
      <div
        class="css-1gwlyb6"
      >
        <a
          class="css-12eo6k0"
          href="/url/url/"
          title="Назад"
        >
          <img
            alt="back"
            src="arrow-left.svg"
          />
        </a>
      </div>
    </div>
    <div
      class="css-1gwlyb6"
    >
      <ul
        class="css-1loydxm"
      >
        <li
          class="css-kagisi"
        >
          <h2
            class="css-156op5v"
          >
            Выберите категорию:
          </h2>
        </li>
        <li
          class="css-kagisi"
        />
      </ul>
      <form>
        <div
          class="css-139b3em"
        >
          <button
            class="css-p42m1b"
            color="#FFFFFF"
            title="Продукты"
            type="button"
          >
            <div
              class="css-1q4bltv"
              color="#08AE0F"
            />
            Продукты
          </button>
          <button
            class="css-p42m1b"
            color="#FFFFFF"
            title="Бытовая химия"
            type="button"
          >
            <div
              class="css-1ewgiqb"
              color="#3414F5"
            />
            Бытовая химия
          </button>
        </div>
        <p
          class="css-1enixo5"
        >
          Введите название покупки:
        </p>
        <div
          class="css-dw8up7"
        >
          <textarea
            class="css-14sbxw9"
            name="text"
            placeholder="Введите текст"
          />
        </div>
        <button
          class="css-10uh9e6"
          title="Добавить"
          type="submit"
        >
          Добавить
        </button>
      </form>
      <form>
        <p
          class="css-1enixo5"
        >
          Если нет подходящей категории:
        </p>
        <div
          class="css-4ok39k"
        >
          <input
            class="css-1w4q98z"
            name="name"
            placeholder="Введите название категории"
            type="text"
            value="%овощи"
          />
          <span
            class="css-uexi7o"
          >
            Название категории должно содержать только буквы, допустимо тире
          </span>
          <select
            class="css-178zj4d"
            data-testid="select"
            name="color"
          >
            <option
              disabled=""
              value=""
            >
              Выберите цвет
            </option>
            <option
              value="#08AE0F"
            >
              Зеленый
            </option>
            <option
              value="#9D79B9"
            >
              Лиловый
            </option>
            <option
              value="#B11F1F"
            >
              Алый
            </option>
            <option
              value="#3414F5"
            >
              Синий
            </option>
            <option
              value="#008060"
            >
              Тёмно-зелёный
            </option>
            <option
              value="#D928D2"
            >
              Розовый
            </option>
            <option
              value="#9B763D"
            >
              Коричневый
            </option>
            <option
              value="#830DF9"
            >
              Фиолетовый
            </option>
            <option
              value="#FA8803"
            >
              Оранжевый
            </option>
            <option
              value="#FCF20E"
            >
              Жёлтый
            </option>
            <option
              value="#EC1818"
            >
              Красный
            </option>
            <option
              value="#14F52B"
            >
              Светло-зеленый
            </option>
          </select>
          <span
            class="css-uexi7o"
          >
            Необходимо выберать цвет категории
          </span>
        </div>
        <button
          class="css-15jozr4"
          title="Добавить категорию"
          type="submit"
        >
          Добавить категорию
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`testing CategorySelect test render CategorySelect add categories 3`] = `
<div>
  <div>
    <div
      class="css-10m13ut"
    >
      <div
        class="css-1gwlyb6"
      >
        <a
          class="css-12eo6k0"
          href="/url/url/"
          title="Назад"
        >
          <img
            alt="back"
            src="arrow-left.svg"
          />
        </a>
      </div>
    </div>
    <div
      class="css-1gwlyb6"
    >
      <ul
        class="css-1loydxm"
      >
        <li
          class="css-kagisi"
        >
          <h2
            class="css-156op5v"
          >
            Выберите категорию:
          </h2>
        </li>
        <li
          class="css-kagisi"
        />
      </ul>
      <form>
        <div
          class="css-139b3em"
        >
          <button
            class="css-p42m1b"
            color="#FFFFFF"
            title="Продукты"
            type="button"
          >
            <div
              class="css-1q4bltv"
              color="#08AE0F"
            />
            Продукты
          </button>
          <button
            class="css-p42m1b"
            color="#FFFFFF"
            title="Бытовая химия"
            type="button"
          >
            <div
              class="css-1ewgiqb"
              color="#3414F5"
            />
            Бытовая химия
          </button>
        </div>
        <p
          class="css-1enixo5"
        >
          Введите название покупки:
        </p>
        <div
          class="css-dw8up7"
        >
          <textarea
            class="css-14sbxw9"
            name="text"
            placeholder="Введите текст"
          />
        </div>
        <button
          class="css-10uh9e6"
          title="Добавить"
          type="submit"
        >
          Добавить
        </button>
      </form>
      <form>
        <p
          class="css-1enixo5"
        >
          Если нет подходящей категории:
        </p>
        <div
          class="css-4ok39k"
        >
          <input
            class="css-1w4q98z"
            disabled=""
            name="name"
            placeholder="Введите название категории"
            type="text"
            value="Фрукты"
          />
          <select
            class="css-178zj4d"
            data-testid="select"
            disabled=""
            name="color"
          >
            <option
              disabled=""
              value=""
            >
              Выберите цвет
            </option>
            <option
              value="#08AE0F"
            >
              Зеленый
            </option>
            <option
              value="#9D79B9"
            >
              Лиловый
            </option>
            <option
              value="#B11F1F"
            >
              Алый
            </option>
            <option
              value="#3414F5"
            >
              Синий
            </option>
            <option
              value="#008060"
            >
              Тёмно-зелёный
            </option>
            <option
              value="#D928D2"
            >
              Розовый
            </option>
            <option
              value="#9B763D"
            >
              Коричневый
            </option>
            <option
              value="#830DF9"
            >
              Фиолетовый
            </option>
            <option
              value="#FA8803"
            >
              Оранжевый
            </option>
            <option
              value="#FCF20E"
            >
              Жёлтый
            </option>
            <option
              value="#EC1818"
            >
              Красный
            </option>
            <option
              value="#14F52B"
            >
              Светло-зеленый
            </option>
          </select>
        </div>
        <button
          class="css-15jozr4"
          disabled=""
          title="Добавить категорию"
          type="submit"
        >
          Добавить категорию
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`testing CategorySelect test render CategorySelect add categories 4`] = `
<div>
  <div>
    <div
      class="css-10m13ut"
    >
      <div
        class="css-1gwlyb6"
      >
        <a
          class="css-12eo6k0"
          href="/url/url/"
          title="Назад"
        >
          <img
            alt="back"
            src="arrow-left.svg"
          />
        </a>
      </div>
    </div>
    <div
      class="css-1gwlyb6"
    >
      <ul
        class="css-1loydxm"
      >
        <li
          class="css-kagisi"
        >
          <h2
            class="css-156op5v"
          >
            Выберите категорию:
          </h2>
        </li>
        <li
          class="css-kagisi"
        >
          <button
            class="css-kxqetq"
            title="Кнопка для добавления категорий"
            type="button"
          >
            +
          </button>
        </li>
      </ul>
      <form>
        <div
          class="css-139b3em"
        >
          <button
            class="css-p42m1b"
            color="#FFFFFF"
            title="Продукты"
            type="button"
          >
            <div
              class="css-1q4bltv"
              color="#08AE0F"
            />
            Продукты
          </button>
          <button
            class="css-p42m1b"
            color="#FFFFFF"
            title="Бытовая химия"
            type="button"
          >
            <div
              class="css-1ewgiqb"
              color="#3414F5"
            />
            Бытовая химия
          </button>
        </div>
        <p
          class="css-1enixo5"
        >
          Введите название покупки:
        </p>
        <div
          class="css-dw8up7"
        >
          <textarea
            class="css-14sbxw9"
            name="text"
            placeholder="Введите текст"
          />
        </div>
        <button
          class="css-10uh9e6"
          title="Добавить"
          type="submit"
        >
          Добавить
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`testing CategorySelect test render CategorySelect click button back 1`] = `
<div>
  <div>
    <div
      class="css-10m13ut"
    >
      <div
        class="css-1gwlyb6"
      >
        <a
          class="css-12eo6k0"
          href="/url/url/"
          title="Назад"
        >
          <img
            alt="back"
            src="arrow-left.svg"
          />
        </a>
      </div>
    </div>
    <div
      class="css-1gwlyb6"
    >
      <ul
        class="css-1loydxm"
      >
        <li
          class="css-kagisi"
        >
          <h2
            class="css-156op5v"
          >
            Выберите категорию:
          </h2>
        </li>
        <li
          class="css-kagisi"
        >
          <button
            class="css-kxqetq"
            title="Кнопка для добавления категорий"
            type="button"
          >
            +
          </button>
        </li>
      </ul>
      <form>
        <div
          class="css-139b3em"
        >
          <button
            class="css-p42m1b"
            color="#FFFFFF"
            title="Продукты"
            type="button"
          >
            <div
              class="css-1q4bltv"
              color="#08AE0F"
            />
            Продукты
          </button>
          <button
            class="css-p42m1b"
            color="#FFFFFF"
            title="Бытовая химия"
            type="button"
          >
            <div
              class="css-1ewgiqb"
              color="#3414F5"
            />
            Бытовая химия
          </button>
        </div>
        <p
          class="css-1enixo5"
        >
          Введите название покупки:
        </p>
        <div
          class="css-dw8up7"
        >
          <textarea
            class="css-14sbxw9"
            name="text"
            placeholder="Введите текст"
          />
        </div>
        <button
          class="css-10uh9e6"
          title="Добавить"
          type="submit"
        >
          Добавить
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`testing CategorySelect test render CategorySelect current categories 1`] = `
<div>
  <div>
    <div
      class="css-10m13ut"
    >
      <div
        class="css-1gwlyb6"
      >
        <a
          class="css-12eo6k0"
          href="/url/url/"
          title="Назад"
        >
          <img
            alt="back"
            src="arrow-left.svg"
          />
        </a>
      </div>
    </div>
    <div
      class="css-1gwlyb6"
    >
      <ul
        class="css-1loydxm"
      >
        <li
          class="css-kagisi"
        >
          <h2
            class="css-156op5v"
          >
            Выберите категорию:
          </h2>
        </li>
        <li
          class="css-kagisi"
        >
          <button
            class="css-kxqetq"
            title="Кнопка для добавления категорий"
            type="button"
          >
            +
          </button>
        </li>
      </ul>
      <form>
        <div
          class="css-139b3em"
        >
          <button
            class="css-p42m1b"
            color="#FFFFFF"
            title="Продукты"
            type="button"
          >
            <div
              class="css-1q4bltv"
              color="#08AE0F"
            />
            Продукты
          </button>
          <button
            class="css-p42m1b"
            color="#FFFFFF"
            title="Бытовая химия"
            type="button"
          >
            <div
              class="css-1ewgiqb"
              color="#3414F5"
            />
            Бытовая химия
          </button>
        </div>
        <p
          class="css-1enixo5"
        >
          Введите название покупки:
        </p>
        <div
          class="css-dw8up7"
        >
          <textarea
            class="css-14sbxw9"
            name="text"
            placeholder="Введите текст"
          />
        </div>
        <button
          class="css-10uh9e6"
          title="Добавить"
          type="submit"
        >
          Добавить
        </button>
      </form>
    </div>
  </div>
</div>
`;
